--- a/site/m-address-add.html
+++ b/site/m-address-add.html
@@ -19,25 +19,27 @@
 </nav>
 
 <div class="content">
-    <div class="m-modify-name mb0-6">
-        收货人姓名
-    </div>
-    <div>
-        <input type="text" placeholder="请填写收货人的真实姓名" class="m-input width98">
+    <div class="mt1">
+        <div class="m-modify-name mb0-6">
+            收货人姓名:
+        </div>
+        <div class=" m-underline-d0d0d0 mt1 m-modify-input">
+            <input type="text" placeholder="请填写收货人的真实姓名" class="m-input">
+        </div>
     </div>
     <div><span class="tips-error">请输入姓名</span></div>
 
-    <div class="m-modify-name mb0-6 mt1">
+    <div class="m-modify-name mb0-6 mt3">
         收货地址
     </div>
     <div>
-        <select class="select-appearance width49 mb0-6">
+        <select class="select-appearance mb0-6">
             <option>请选择省</option>
             <option>广东省</option>
             <option>湖南省</option>
             <option>湖北省</option>
         </select>
-        <select class="select-appearance width49 mb0-6" style="margin-left: 0.3rem">
+        <select class="select-appearance mb0-6">
             <option>请选择市</option>
             <option>广州市</option>
             <option>深圳市</option>
@@ -52,23 +54,33 @@
             <option>荔枝区</option>
         </select>
     </div>
-    <div>
-        <input type="text" placeholder="详细街道地址，不少于10个字" class="m-input width98">
+    <div class="mt1">
+        <div class="m-modify-name mb0-6 mt1">
+            详细地址:
+        </div>
+        <div class=" m-underline-d0d0d0 mt1 m-modify-input">
+            <input type="text" placeholder="详细街道地址，不少于10个字" class="m-input ">
+        </div>
     </div>
     <div><span class="tips-error">不少于10个字</span></div>
 
-    <div class="m-modify-name mb0-6 mt1">
-        邮政编码
-    </div>
-    <div>
-        <input type="text" placeholder="邮政编码，6位数字" class="m-input width98">
+
+    <div class="mt1">
+        <div class="m-modify-name mb0-6 mt1">
+            邮政编码:
+        </div>
+        <div class=" m-underline-d0d0d0 mt1 m-modify-input">
+            <input type="text" placeholder="邮政编码，6位数字" class="m-input">
+        </div>
     </div>
 
-    <div class="m-modify-name mb0-6 mt1 ">
-        手机号码
-    </div>
-    <div>
-        <input type="text" placeholder="联系人电话，11位数字" class="m-input width98">
+    <div class="mt1">
+        <div class="m-modify-name mb0-6 mt1 ">
+            手机号码:
+        </div>
+        <div class=" m-underline-d0d0d0 mt1 m-modify-input">
+            <input type="text" placeholder="联系人电话，11位数字" class="m-input ">
+        </div>
     </div>
     <div><span class="tips-error">请输入正确的手机号码</span></div>
 
