添加地址优化

--- a/site/m-address-add.html
+++ b/site/m-address-add.html
@@ -19,7 +19,7 @@
 </nav>
 
 <div class="content">
-    <div class="mt1">
+    <div class="">
         <div class="m-modify-name mb0-6">
             收货人姓名:
         </div>
@@ -29,7 +29,7 @@
     </div>
     <div><span class="tips-error">请输入姓名</span></div>
 
-    <div class="m-modify-name mb0-6 mt3">
+    <div class="m-modify-name mb0-6 mt1">
         收货地址
     </div>
     <div>
@@ -54,7 +54,7 @@
             <option>荔枝区</option>
         </select>
     </div>
-    <div class="mt1">
+    <div class="">
         <div class="m-modify-name mb0-6 mt1">
             详细地址:
         </div>
@@ -65,7 +65,7 @@
     <div><span class="tips-error">不少于10个字</span></div>
 
 
-    <div class="mt1">
+    <div class="">
         <div class="m-modify-name mb0-6 mt1">
             邮政编码:
         </div>
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div class="mt1">
+    <div class="">
         <div class="m-modify-name mb0-6 mt1 ">
             手机号码:
         </div>
