--- a/nextHour/next-hour.html
+++ b/nextHour/next-hour.html
@@ -18,7 +18,7 @@
 
 
 </head>
-<body >
+<body ng-controller="nextHourCtrl">
     <div class="share-cover">
         <div class="share-guide" id="weixin-guide"></div>
         <div class="share-guide" id="mobile-guide"></div>
