--- a/site/m-address-add.html
+++ b/site/m-address-add.html
@@ -73,6 +73,7 @@
             <input type="text" placeholder="邮政编码，6位数字" class="m-input">
         </div>
     </div>
+    <div><span class="tips-error">请输入正确的手机号码</span></div>
 
     <div class="">
         <div class="m-modify-name mb0-6 mt1 ">
