--- a/newIndex/index.html
+++ b/newIndex/index.html
@@ -28,7 +28,6 @@
         </div>
     </div>
     <div class="second-banner">
-
     </div>
 </nav>
 
@@ -42,17 +41,65 @@
                         <img src="images/banner_01.jpg" style="width:100%">
                     </li>
                     <li style='display:none;'>
-                        <img src="images/banner_01.jpg" style="width:100%">
+                        <img src="images/banner_02.jpg" style="width:100%">
                     </li>
                     <li style='display:none;'>
-                        <img src="images/banner_01.jpg" style="width:100%">
+                        <img src="images/banner_03.jpg" style="width:100%">
+                    </li>
+                    <li style='display:block'>
+                        <img src="images/banner_04.jpg" style="width:100%">
+                    </li>
+                    <li style='display:none;'>
+                        <img src="images/banner_05.jpg" style="width:100%">
+                    </li>
+                    <li style='display:none;'>
+                        <img src="images/banner_06.jpg" style="width:100%">
                     </li>
                 </ul>
             </div>
+            <div class="detail">
+                <div class="detail-img"></div>
+                <div class="button purchase-button">
+                    <div class="button-content">点击购买</div>
+                </div>
+            </div>
             <div id="pagenavi">
-                <a href="#" class="active">1</a>
-                <a href="#">2</a>
-                <a href="#">3</a>
+                <a href="#" class="active" style=" background: url('images/dot_empty.png') center top no-repeat;
+                background-size: 10px 10px;
+                display: inline-block;
+                height: 10px;
+                margin-right: 10px;
+                width: 10px;"></a>
+                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+                background-size: 10px 10px;
+                display: inline-block;
+                height: 10px;
+                margin-right: 10px;
+                width: 10px;"></a>
+                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+                background-size: 10px 10px;
+                display: inline-block;
+                height: 10px;
+                margin-right: 10px;
+                width: 10px;"></a>
+                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+                background-size: 10px 10px;
+                display: inline-block;
+                height: 10px;
+                margin-right: 10px;
+                width: 10px;"></a>
+                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+                background-size: 10px 10px;
+                display: inline-block;
+                height: 10px;
+                margin-right: 10px;
+                width: 10px;"></a>
+                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+                background-size: 10px 10px;
+                display: inline-block;
+                height: 10px;
+                margin-right: 10px;
+                width: 10px;"></a>
             </div>
         </section>
         </header>
