--- a/newIndex/index.html
+++ b/newIndex/index.html
@@ -62,6 +62,9 @@
                 <div class="button purchase-button">
                     <div class="button-content">点击购买</div>
                 </div>
+                <div class="get-more">
+                    了解更多 >
+                </div>
             </div>
             <div id="pagenavi">
                 <a href="#" class="active" style=" background: url('images/dot_empty.png') center top no-repeat;
@@ -149,25 +152,25 @@
 
 <footer id="homefooter" data-hires="true">
     <div class="wrapper">
-        <p class="left">Shop the <a href="http://store.apple.com/us" onclick="s_objectID=&quot;http://store.apple.com/us_1&quot;;return this.s_oc?this.s_oc(e):true">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="/retail/" onclick="s_objectID=&quot;http://www.apple.com/retail/_1&quot;;return this.s_oc?this.s_oc(e):true">Apple Retail Store</a>, or find a <a href="/buy/" onclick="s_objectID=&quot;http://www.apple.com/buy/_1&quot;;return this.s_oc?this.s_oc(e):true">reseller</a>.</p>
-        <ul class="piped right">
-            <li class="first">
-            <a href="/sitemap/" onclick="s_objectID=&quot;http://www.apple.com/sitemap/_1&quot;;return this.s_oc?this.s_oc(e):true">Site Map</a></li><li>
-            <a href="/hotnews/" onclick="s_objectID=&quot;http://www.apple.com/hotnews/_1&quot;;return this.s_oc?this.s_oc(e):true">Hot News</a></li><li>
-            <a href="/rss/" onclick="s_objectID=&quot;http://www.apple.com/rss/_1&quot;;return this.s_oc?this.s_oc(e):true">RSS Feeds</a></li><li>
-            <a href="/pr/" onclick="s_objectID=&quot;http://www.apple.com/pr/_1&quot;;return this.s_oc?this.s_oc(e):true">Media Info</a></li><li>
-            <a href="/environment/" onclick="s_objectID=&quot;http://www.apple.com/environment/_2&quot;;return this.s_oc?this.s_oc(e):true">Environment</a></li><li>
-            <a href="/jobs/" onclick="s_objectID=&quot;http://www.apple.com/jobs/_1&quot;;return this.s_oc?this.s_oc(e):true">Job Opportunities</a></li><li>
-            <a href="/contact/" onclick="s_objectID=&quot;http://www.apple.com/contact/_1&quot;;return this.s_oc?this.s_oc(e):true">Contact Us</a></li><li class="worldwide">
-            <a href="/choose-your-country/" onclick="s_objectID=&quot;http://www.apple.com/choose-your-country/_1&quot;;return this.s_oc?this.s_oc(e):true"><img src="http://images.apple.com/global/elements/flags/16x16/usa.png" alt="Choose your country or region" height="16" width="16"></a>
-            </li>
-        </ul><!--/right-->
+        <ul>
+            <li>国馆中国道</li>
+        </ul>
+        <ul>
+            <li>每日一文</li>
+            <li>国馆电台</li>
+        </ul>
+        <ul>
+            <li>每日一文</li>
+            <li>国馆电台</li>
+        </ul>
+
+
 
         <div class="bottom">
         </div>
         <div class="clear left">
             <p class="copyright">Copyright © 2014 备案号粤ICP备13087127号</p>
-        </div><!--/left-->
+        </div><!--/bottom-->
         <div class="right">
             <ul class="piped">
                 <li class="first">
