--- a/site/m-order-detail.html
+++ b/site/m-order-detail.html
@@ -23,24 +23,16 @@
         <div class="m-order-detail-name">
             <div><span class="order-title-label">订单状态</span><span class="m-order-unpay">等待付款</span></div>
             <div><span class="order-title-label">商品总价</span><span>￥5332</span></div>
-            <div><span class="order-title-label">应付总额</span><span>￥5332</span></div>
         </div>
-        <div class="icon-trash m-order-delete"></div>
     </div>
     <div class="m-order-detail-partTwo">
         <div class="ml1">
             <div><span class="order-title-label">下单日期</span><span>2014-4-22 15:43:30</span></div>
             <div><span class="order-title-label">订单编号</span><span>5990500009988859</span></div>
             <div><span class="order-title-label">收货地址</span><span>广东广州市天河区华明路13华普广场东塔702（518129）谢奇 18503014025</span></div>
-            <div><span class="order-title-label">送货时间</span><span>不限</span></div>
-            <div><span class="order-title-label">发票类型</span><span>电子发票</span></div>
-            <div><span class="order-title-label">发票抬头</span><span>个人</span></div>
         </div>
     </div>
-    <div class="m-order-detail-partThree">
-        <div class="m-choose-image mt1 ml1-8">
-            <img src="image/mytiem.png">
-        </div>
+    <div class="m-order-detail-partTwo">
         <div class="m-choose-detail mt1">
             <div class="m-choose-title">
                 中国道中国道
@@ -51,19 +43,15 @@
         </div>
         <div class="clear"></div>
     </div>
-</div>
-
-<div class="m-shopping-checkout">
-    <div class="m-check-total-money">
-        应付总额<span>￥5332</span>
-    </div>
-    <a href="m-online-pay.html">
-        <div class="m-button m-button-check">
-            <div class="m-button-content">
-                立即付款
+    <div class="m-order-detail-partThree">
+        <div class=" mt1 ml1-8">
+            <div class="m-choose-brief-detail">
+                *订单查询、投诉咨询、物流查询请关注微信服务号 国馆酒 (guoguanjiu)
             </div>
         </div>
-    </a>
+        <div class="clear"></div>
+    </div>
 </div>
+
 </body>
 </html>
