--- a/newIndex/index.html
+++ b/newIndex/index.html
@@ -2,27 +2,29 @@
 <html ng-app="guoguanIndex">
 <head>
     <title>国馆·中国道</title>
-    <meta name="viewport" charset="utf-8">
+    <meta name="viewport" charset="utf-8" content="width=1024">
     <meta name="keywords" content="国馆中国道,国馆,国馆酒">
     <meta name="description" content="国馆·中国道，中国收藏级文化白酒，酿酒大师与艺术大师匠心之作。它开创性地将艺术和美酒跨界联姻，融为一体，是你收藏、送礼、品饮的绝佳选择。
 ">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="home/styles/home.css" type="text/css" rel="stylesheet">
     <link href="home/styles/billboard.css" type="text/css" rel="stylesheet">
+    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
 </head>
 <body ng-controller="guoguanIndexCtrl">
 <!--head-->
 <nav id="homenav">
     <div class="banner">
-        <div class="logo"></div>
+        <a href="http://www.guoguan.com">
+            <div class="logo"></div>
+        </a>
         <div class="title"></div>
         <div id="nav_wrapper">
             <div id="nav_menu">
-                <a href="#" id="current_nav">品牌故事</a>
-                <a href="#">顶级酒品</a>
-                <a href="#">文化应用</a>
-                <a href="#">购买</a>
-                <a href="#">联系我们</a>
+                <a href="http://blog.guoguan.com/?p=131" target="_blank"  id="current_nav">品牌故事</a>
+                <a href="http://blog.guoguan.com/?p=151" target="_blank">顶级酒品</a>
+                <a href="http://www.guoguan.com/wenzhang/" target="_blank">文化应用</a>
+                <a href="http://blog.guoguan.com/?page_id=9" target="_blank">联系我们</a>
             </div>
             <div id="nav_animate_block"></div>
         </div>
@@ -33,38 +35,42 @@
 
 <article id="billboard" data-hires="true">
     <div class="gallery autogallery autogallery-slideshow autogallery-hero-gallery">
-        <header id="hero-gallery" class="gallery-view swapView" style="z-index: 1001; position: relative;">
+        <header id="hero-gallery" class="gallery-view swapView" style="z-index: 800; position: relative;">
         <section class="gallery-content hero powerful astronomy sneaky hero-gallery-section-3" id="MASKED-hero-gallery-section-3" style="-webkit-transition: opacity 2s; transition: opacity 2s; z-index: 1001; position: absolute;">
             <div class="swipe">
                 <ul id="slide">
                     <li style='display:block'>
-                        <img src="images/banner_01.jpg" style="width:100%">
+                        <img src="images/banner_01.jpg" style="height:100%">
                     </li>
                     <li style='display:none;'>
-                        <img src="images/banner_02.jpg" style="width:100%">
+                        <img src="images/banner_02.jpg" style="height:100%">
                     </li>
                     <li style='display:none;'>
-                        <img src="images/banner_03.jpg" style="width:100%">
+                        <img src="images/banner_03.jpg" style="height:100%">
                     </li>
                     <li style='display:block'>
-                        <img src="images/banner_04.jpg" style="width:100%">
+                        <img src="images/banner_04.jpg" style="height:100%">
                     </li>
                     <li style='display:none;'>
-                        <img src="images/banner_05.jpg" style="width:100%">
+                        <img src="images/banner_05.jpg" style="height:100%">
                     </li>
                     <li style='display:none;'>
-                        <img src="images/banner_06.jpg" style="width:100%">
+                        <img src="images/banner_06.jpg" style="height:100%">
                     </li>
                 </ul>
             </div>
             <div class="detail">
                 <div class="detail-img"></div>
+                <a href="qore.html" class="qore-code" >
                 <div class="button purchase-button">
                     <div class="button-content">点击购买</div>
                 </div>
-                <div class="get-more">
-                    了解更多 >
-                </div>
+                </a>
+                <a href="http://www.guoguan.com/zhongguodao" target="_blank">
+                    <div class="get-more">
+                        了解更多 >
+                    </div>
+                </a>
             </div>
             <div id="pagenavi">
                 <a href="#" class="active" style=" background: url('images/dot_empty.png') center top no-repeat;
@@ -113,16 +119,17 @@
 <aside class="promos" data-hires="true" id="promos">
     <ul>
         <li>
-            <a class="promo1" href="#">
-                <img src="images/1_01.jpg" width="357" height="200" alt="中国道视频">
+            <a class="promo1" id="youku-play" href="youku.html">
+                <img src="images/1_01.jpg" width="364" height="200" alt="中国道视频">
+                <img src="images/play_icon.png" width="60" height="60" style="position: absolute!important; left: 50%!important; margin-left:-30px!important; top: 50%; margin-top:-30px!important; ">
             </a>
             <div class="title">
                 国馆·中国道 视频欣赏
             </div>
         </li>
         <li>
-            <a class="promo2" href="#">
-                <img src="images/1_02.jpg" width="357" height="200" alt="中国道">
+            <a class="promo2" href="www.guoguan.com/zhongguodao" target="_blank">
+                <img src="images/1_02.jpg" width="364" height="200" alt="中国道">
             </a>
             <div class="title">
                 国馆·中国道 了解详情
@@ -130,8 +137,8 @@
 
         </li>
         <li>
-            <a class="promo3">
-                <img src="images/1_03.jpg" width="357" height="200" alt="中国道" >
+            <a class="promo3" href="http://blog.guoguan.com/?p=131" target="_blank">
+                <img src="images/1_03.jpg" width="364" height="200" alt="中国道" >
             </a>
             <div class="title">
                 国馆故事
@@ -139,8 +146,8 @@
 
         </li>
         <li>
-            <a class="promo4">
-                <img src="images/1_04.jpg" width="357" height="200" alt="中国道" >
+            <a class="promo4" id="qore-code-two" href="qore.html">
+                <img src="images/1_04.jpg" width="364" height="200" alt="中国道" >
             </a>
             <div class="title">
                 购买服务
@@ -151,26 +158,100 @@
 </aside>
 
 <footer id="homefooter" data-hires="true">
+    <div>
+        <dl>
+            <a href="http://www.guoguan.com/zhongguodao" target="_blank">
+                <dt>国馆中国道</dt>
+                <dd>
+                    <a href="http://weibo.com/guoguan5000" target="_blank">
+                        <img src="images /sina-icon.png" style="margin-left: -10px;">
+                    </a>
+                    <a href="qore.html" class="qore-code" >
+                        <img src="images /weixin.png" style="width: 25px; height: 18px; vertical-align: middle; margin-top: -20px;">
+                    </a>
+                </dd>
+            </a>
+        </dl>
+        <dl>
+            <a href="http://www.guoguan.com/wenzhang/" target="_blank">
+                <dt>每日一文</dt>
+            </a>
+            <a href="http://www.guoguan.com/fm/" target="_blank">
+                <dt>国馆电台</dt>
+            </a>
+        </dl>
+        <dl>
+            <a href="http://weibo.com/guoguan5000" target="_blank">
+                <dt>动态</dt>
+            </a>
+            <a href="http://weibo.com/guoguan5000" target="_blank">
+                <dd>新浪微博</dd>
+            </a>
+        </dl>
+        <dl>
+            <a href="http://blog.guoguan.com/?page_id=9" target="_blank">
+                <dt>联系我们</dt>
+            </a>
+            <!--<a href="#" target="_blank">
+                <dd>商业合作</dd>
+            </a>
+            <a href="#" target="_blank">
+                <dd>品牌合作</dd>
+            </a>
+            <a href="#" target="_blank">
+                <dd>媒体报道</dd>
+            </a>
+            <a href="#" target="_blank">
+                <dd>拜访国馆</dd>
+            </a>-->
+        </dl>
+        <dl>
+            <a href="qore.html" class="qore-code">
+                <dt>购买</dt>
+            </a>
+            <a href="http://www.guoguan.com/zhongguodao" target="_blank">
+                <dd>国馆中国道</dd>
+            </a>
+           <!-- <a href="#" target="_blank">
+                <dd>个人订购</dd>
+            </a>
+            <a href="#" target="_blank">
+                <dd>企业团购</dd>
+            </a>
+            <a href="#" target="_blank">
+                <dd>成为会员</dd>
+            </a>-->
+        </dl>
+        <dl>
+            <a href="http://blog.guoguan.com/?page_id=30" target="_blank">
+                <dt>关于国馆</dt>
+            </a>
+            <a href="http://blog.guoguan.com/?p=131" target="_blank">
+                <dd>品牌故事</dd>
+            </a>
+            <a href="http://blog.guoguan.com/?p=188" target="_blank">
+                <dd>管理团队</dd>
+            </a>
+            <a href="http://blog.guoguan.com/?p=131" target="_blank">
+                <dd>顶级好酒</dd>
+            </a>
+            <a href="http://blog.guoguan.com/?p=131" target="_blank">
+                <dd>跨界大师合作</dd>
+            </a>
+            <a href="http://blog.guoguan.com/?p=131" target="_blank">
+                <dd>工作机会</dd>
+            </a>
+        </dl>
+    </div>
     <div class="wrapper">
-        <ul>
-            <li>国馆中国道</li>
-        </ul>
-        <ul>
-            <li>每日一文</li>
-            <li>国馆电台</li>
-        </ul>
-        <ul>
-            <li>每日一文</li>
-            <li>国馆电台</li>
-        </ul>
-
-
-
         <div class="bottom">
         </div>
         <div class="clear left">
-            <p class="copyright">Copyright © 2014 备案号粤ICP备13087127号</p>
+            <a target="_blank" href="http://www.miitbeian.gov.cn" class="btn btn-link" rel="nofollow">
+                <p class="copyright">Copyright © 2014 备案号粤ICP备13087127号</p>
+            </a>
         </div><!--/bottom-->
+        <!--
         <div class="right">
             <ul class="piped">
                 <li class="first">
@@ -184,6 +265,7 @@
                 </li>
             </ul>
         </div>
+        -->
 
     </div><!--/wrapper-->
 </footer>
@@ -193,14 +275,53 @@
 <script src="global/scripts/controllers.js" type="text/javascript"></script>
 <script src="global/scripts/lib/touchslider.js" type="text/javascript"></script>
 <script src="home/scripts/slidenav.js" type="text/javascript"></script>
+<script src="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
+<script src="global/scripts/lib/fancybox/jquery.easing-1.3.pack.js" type="text/javascript"></script>
 
 <script type="text/javascript">
     var active=0,
         as=document.getElementById('pagenavi').getElementsByTagName('a');
+
+    for(var i=0;i<as.length;i++){
+        (function(){
+            var j=i;
+            as[i].onclick=function(){
+                t4.slide(j);
+                return false;
+            }
+        })();
+    }
+
     var t4 = new TouchSlider({id:'slide', speed:600, timeout:6000, before:function(index){
         as[active].className='';
         active=index;
         as[active].className='active';
     }});
+</script>
+<script>
+    $(document).ready(function() {
+        $("#youku-play").fancybox({
+            'width'				: 700,
+            'height'			: 700,
+            'autoScale'			: false,
+            'transitionIn'		: 'none',
+            'overlayOpacity'		: '1',
+            'overlayColor'		: '#fff',
+            'transitionOut'		: 'none',
+            'scrolling'		: 'no',
+            'type'				: 'iframe'
+        });
+        $(".qore-code").fancybox({
+            'width'				: 200,
+            'height'			: 200,
+            'autoScale'			: false,
+            'transitionIn'		: 'none',
+            'overlayOpacity'		: '1',
+            'overlayColor'		: '#fff',
+            'transitionOut'		: 'none',
+            'scrolling'		: 'no',
+            'type'				: 'iframe'
+        });
+    });
 </script>
 </html>
