--- a/newIndex/qore.html
+++ b/newIndex/qore.html
@@ -4,8 +4,6 @@
     <title></title>
 </head>
 <body style="overflow: hidden; height: 1000px">
-<div  style="width:200px; height: 200px">
-    <img src="images/qore-code.png" width="200" height="200">
-</div>
+    <img src="images/qore-code.png" style="width: 200px; height: 200px; margin-left: -7px; margin-top: -7px">
 </body>
 </html>
