--- a/newIndex/youku.html
+++ b/newIndex/youku.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%">
 <head>
     <title></title>
 </head>
-<body style="overflow: hidden; height: 1000px">
-<div id="youkuplayer" style="width:700px; height: 700px"></div>
+<body style="overflow: hidden; height: 100%">
+<div id="popup" style=" width: 900px; height: 520px; position: absolute;
+top: 50%;
+left: 50%;
+-webkit-transform: translate(-50%, -50%);
+-moz-transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+-o-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);">
+    <img src="images/delete_sign.png" width="30" height="30" style="position: absolute; top:0; right: 0;">
+    <div id="youkuplayer" style="width:860px; height: 484px; margin-top: 40px;">
+    </div>
+</div>
+
 <script type="text/javascript" src="http://player.youku.com/jsapi">
     player = new YKU.Player('youkuplayer',{
         styleid: '0',
@@ -12,6 +24,21 @@
         vid: 'XNzA5OTc0NDUy',
         autoplay: true
     });
+</script>
+<script src="global/scripts/lib/jquery-1.8.0.js"></script>
+<script type="text/javascript">
+
+ var hitEvent = 'ontouchstart' in document.documentElement
+         ? 'touchstart'
+         : 'click';
+ $('body').bind(hitEvent, function(event) {
+     window.location.href = "http://www.guoguan.com";
+     event.stopPropagation();
+ });
+ $('#popup').bind(hitEvent, function(event) {
+     console.log(111)
+     event.stopPropagation();
+ });
 </script>
 </body>
 </html>
