--- a/newIndex/index.html
+++ b/newIndex/index.html
@@ -8,17 +8,18 @@
 ">
     <link href="global/styles/base.css?v=00000001" type="text/css" rel="stylesheet">
     <link href="home/styles/home.css?v=00000001" type="text/css" rel="stylesheet">
-    <link href="home/styles/billboard.css?v=00000001" type="text/css" rel="stylesheet">
     <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
 </head>
 <body ng-controller="guoguanIndexCtrl">
 <!--head-->
-<nav id="homenav">
+<div id="homenav">
     <div class="banner">
         <a href="http://www.guoguan.com">
             <div class="logo"></div>
         </a>
-        <div class="title"></div>
+        <a href="">
+            <div class="title"></div>
+        </a>
         <div id="nav_wrapper">
             <div id="nav_menu">
                 <a href="http://blog.guoguan.com/?p=131" target="_blank"  id="current_nav">品牌故事</a>
@@ -31,92 +32,89 @@
     </div>
     <div class="second-banner">
     </div>
-</nav>
+</div>
 
-<article id="billboard" data-hires="true">
-    <div class="gallery autogallery autogallery-slideshow autogallery-hero-gallery">
-        <header id="hero-gallery" class="gallery-view swapView" style="z-index: 800; position: relative;">
-        <section class="gallery-content hero powerful astronomy sneaky hero-gallery-section-3" id="MASKED-hero-gallery-section-3" style="-webkit-transition: opacity 2s; transition: opacity 2s; z-index: 1001; position: absolute;">
-            <div class="swipe">
-                <ul id="slide">
-                    <li style='display:block'>
-                        <img src="images/banner_01.jpg" style="height:100%">
-                    </li>
-                    <li style='display:none;'>
-                        <img src="images/banner_02.jpg" style="height:100%">
-                    </li>
-                    <li style='display:none;'>
-                        <img src="images/banner_03.jpg" style="height:100%">
-                    </li>
-                    <li style='display:block'>
-                        <img src="images/banner_04.jpg" style="height:100%">
-                    </li>
-                    <li style='display:none;'>
-                        <img src="images/banner_05.jpg" style="height:100%">
-                    </li>
-                    <li style='display:none;'>
-                        <img src="images/banner_06.jpg" style="height:100%">
-                    </li>
-                </ul>
-            </div>
-            <div class="detail">
-                <div class="detail-img"></div>
-                <a href="qore.html" class="qore-code" >
+<div id="billboard" data-hires="true">
+    <div class="swipe">
+        <ul id="slide">
+            <li style='display:block'>
+                <img src="images/banner_01.jpg" >
+            </li>
+            <li style='display:none;'>
+                <img src="images/banner_02.jpg" >
+            </li>
+            <li style='display:none;'>
+                <img src="images/banner_03.jpg" >
+            </li>
+            <li style='display:block'>
+                <img src="images/banner_04.jpg" >
+            </li>
+            <li style='display:none;'>
+                <img src="images/banner_05.jpg" >
+            </li>
+            <li style='display:none;'>
+                <img src="images/banner_06.jpg" >
+            </li>
+        </ul>
+    </div>
+    <div class="purchase">
+        <div class="detail">
+            <div class="detail-img"></div>
+            <a href="qore.html" class="qore-code" >
                 <div class="button purchase-button">
                     <div class="button-content">点击购买</div>
                 </div>
-                </a>
-                <a href="http://www.guoguan.com/zhongguodao" target="_blank">
-                    <div class="get-more">
-                        了解更多 >
-                    </div>
-                </a>
-            </div>
-            <div id="pagenavi">
-                <a href="#" class="active" style=" background: url('images/dot_empty.png') center top no-repeat;
-                background-size: 10px 10px;
-                display: inline-block;
-                height: 10px;
-                margin-right: 10px;
-                width: 10px;"></a>
-                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-                background-size: 10px 10px;
-                display: inline-block;
-                height: 10px;
-                margin-right: 10px;
-                width: 10px;"></a>
-                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-                background-size: 10px 10px;
-                display: inline-block;
-                height: 10px;
-                margin-right: 10px;
-                width: 10px;"></a>
-                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-                background-size: 10px 10px;
-                display: inline-block;
-                height: 10px;
-                margin-right: 10px;
-                width: 10px;"></a>
-                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-                background-size: 10px 10px;
-                display: inline-block;
-                height: 10px;
-                margin-right: 10px;
-                width: 10px;"></a>
-                <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-                background-size: 10px 10px;
-                display: inline-block;
-                height: 10px;
-                margin-right: 10px;
-                width: 10px;"></a>
-            </div>
-        </section>
-        </header>
+            </a>
+            <a href="http://www.guoguan.com/zhongguodao" target="_blank">
+                <div class="get-more">
+                    了解更多 >
+                </div>
+            </a>
+        </div>
     </div>
-</article>
+
+    <div id="pagenavi">
+        <a href="#" class="active" style=" background: url('images/dot_empty.png') center top no-repeat;
+        background-size: 10px 10px;
+        display: inline-block;
+        height: 10px;
+        margin-right: 10px;
+        width: 10px;"></a>
+        <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+        background-size: 10px 10px;
+        display: inline-block;
+        height: 10px;
+        margin-right: 10px;
+        width: 10px;"></a>
+        <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+        background-size: 10px 10px;
+        display: inline-block;
+        height: 10px;
+        margin-right: 10px;
+        width: 10px;"></a>
+        <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+        background-size: 10px 10px;
+        display: inline-block;
+        height: 10px;
+        margin-right: 10px;
+        width: 10px;"></a>
+        <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+        background-size: 10px 10px;
+        display: inline-block;
+        height: 10px;
+        margin-right: 10px;
+        width: 10px;"></a>
+        <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+        background-size: 10px 10px;
+        display: inline-block;
+        height: 10px;
+        margin-right: 10px;
+        width: 10px;"></a>
+    </div>
+</div>
 
 
-<aside class="promos" data-hires="true" id="promos">
+<div class="promos" data-hires="true" id="promos">
     <ul>
         <li>
             <a class="promo1" href="youku.html">
@@ -155,9 +153,9 @@
 
         </li>
     </ul>
-</aside>
+</div>
 
-<footer id="homefooter" data-hires="true">
+<div id="homefooter" data-hires="true">
     <div>
         <dl>
             <a href="http://www.guoguan.com/zhongguodao" target="_blank">
@@ -243,9 +241,10 @@
             </a>
         </dl>
     </div>
+    <div class="clear"></div>
+    <div class="bottom">
+    </div>
     <div class="wrapper">
-        <div class="bottom">
-        </div>
         <div class="clear left">
                 <p class="copyright">Copyright © 2014 国馆
                     <a target="_blank" href="http://www.miitbeian.gov.cn" class="btn btn-link" rel="nofollow" title="粤ICP备13087127号">
@@ -270,7 +269,7 @@
         -->
 
     </div><!--/wrapper-->
-</footer>
+</div>
 </body>
 <script src="global/scripts/lib/angular.min.js" type="text/javascript"></script>
 <script src="global/scripts/lib/jquery-1.8.0.js" type="text/javascript"></script>
