--- a/newIndex/zhongguodao.html
+++ b/newIndex/zhongguodao.html
@@ -42,7 +42,7 @@
                     <a href="http://blog.guoguan.com/?page_id=9" target="_blank">联系我们</a>
                 </li>
             </ul>
-            <div id="nav_animate_block"></div>
+            <!--<div id="nav_animate_block"></div>-->
         </div>
     </div>
     <div class="second-banner" style="width: 100%; left: 0; margin-left: 0">
@@ -59,11 +59,13 @@
 <div class="good-information1 ">
     <img src="images/logo-line.png" style="width: 100px; height: 100px;padding-top: 85px; margin-bottom: 25px; display:block; margin-left:auto; margin-right:auto;">
     <img src="images/111.png" style="width:625px; display:block; margin-left:auto; margin-right:auto;">
-    <a href="youku-two.html" >
         <div class="watch-tv">
+            <a href="youku.html" style="text-decoration: underline">
             观看视频
+            <img src="images/play_icon.png" width="15" height="15" style="vertical-align: middle;
+margin-top: -3px;">
+            </a>
         </div>
-    </a>
      <span class="hidden">这一次，我们重新定义白酒,在主流之外，我们终于以全新的方式做出了这款白酒，它代表了当前国内酿酒技术、器型工艺的最高水平，它和所有品牌都不一样，它承载的是中国的文化、艺术和情感，没有其他。
      </span>
 </div>
