--- a/newIndex/index.html
+++ b/newIndex/index.html
@@ -39,7 +39,7 @@
                     <a href="http://blog.guoguan.com/?page_id=9" target="_blank">联系我们</a>
                 </li>
             </ul>
-            <div id="nav_animate_block"></div>
+            <!--<div id="nav_animate_block"></div>-->
         </div>
     </div>
     <div class="second-banner">
@@ -132,36 +132,36 @@
             <a class="promo1" href="youku.html">
                 <img src="images/1_01.jpg" width="364" height="200" alt="中国道视频">
                 <img src="images/play_icon.png" width="60" height="60" style="position: absolute!important; left: 50%!important; margin-left:-30px!important; top: 50%; margin-top:-30px!important; ">
+                <div class="title">
+                    国馆·中国道 视频欣赏
+                </div>
             </a>
-            <div class="title">
-                国馆·中国道 视频欣赏
-            </div>
         </li>
         <li>
             <a class="promo2" href="www.guoguan.com/zhongguodao" target="_blank">
                 <img src="images/1_02.jpg" width="364" height="200" alt="中国道">
+                <div class="title">
+                    国馆·中国道 了解详情
+                </div>
             </a>
-            <div class="title">
-                国馆·中国道 了解详情
-            </div>
 
         </li>
         <li>
             <a class="promo3" href="http://blog.guoguan.com/?p=131" target="_blank">
                 <img src="images/1_03.jpg" width="364" height="200" alt="中国道" >
+                <div class="title">
+                    国馆故事
+                </div>
             </a>
-            <div class="title">
-                国馆故事
-            </div>
 
         </li>
         <li>
             <a class="promo4 qore-code" href="qore.html">
                 <img src="images/1_04.jpg" width="364" height="200" alt="中国道" >
+                <div class="title">
+                    购买服务
+                </div>
             </a>
-            <div class="title">
-                购买服务
-            </div>
 
         </li>
     </ul>
