--- a/nextHour/next-hour.html
+++ b/nextHour/next-hour.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="keywords" content="中国道,国馆,国馆网,国馆酒">
     <meta name="description" content="文化下一小时。">
-    <!-- css style sheet -->
+    <!-- styles style sheet -->
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
