--- a/nextHour/zhongguodao.html
+++ b/nextHour/zhongguodao.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="国馆中国道,国馆,国馆酒">
     <meta name="description" content="国馆·中国道，中国收藏级文化白酒，酿酒大师与艺术大师匠心之作。它开创性地将艺术和美酒跨界联姻，融为一体，是你收藏、送礼、品饮的绝佳选择。
 ">
-    <!-- css style sheet -->
+    <!-- styles style sheet -->
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
