--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -46,7 +46,7 @@
     <!--<ul class='etabs'>
         <li class='tab'><a href="#tabs1-html">概述</a></li>
         <li class='tab'><a href="#tabs1-js">参数</a></li>
-        <li class='tab'><a href="#tabs1-css">故事</a></li>
+        <li class='tab'><a href="#tabs1-styles">故事</a></li>
     </ul>-->
     <div class='panel-container'>
         <div id="tabs1-html" style="background-color: #fff">
@@ -115,7 +115,7 @@
             </div>
         </div>
 
-        <div id="tabs1-css">
+        <div id="tabs1-styles">
             <div class="product-story-one">
                 <img src="images/1-01.jpg" style="width: 100%">
             </div>
