--- a/newIndex/register.html
+++ b/newIndex/register.html
@@ -51,7 +51,7 @@
         <div class="register-form">
             <h1 class="register-title register-title-position">注册</h1>
             <form>
-                <div>
+                <div class="error-father">
                     <label>手机号码：</label>
                     <input type="tel" class="input-area" placeholder="只支持大陆地区的手机号码">
                     <div class="shit-button mt20">
@@ -59,14 +59,30 @@
                             获取验证码
                         </div>
                     </div>
+                    <div class="error-tips">
+                        <div class="error-content">
+                            手机号码有误
+                        </div>
+                    </div>
                 </div>
-                <div class="mt20">
+                <div class="mt20 error-father">
                     <label>验证码：</label>
                     <input type="tel" class="input-area" placeholder="输入手机收到的验证码">
+                    <div class="error-tips">
+                        <div class="error-content">
+                            请输入正确的验证码
+                        </div>
+                    </div>
                 </div>
-                <div class="mt20">
+                <div class="mt20 error-father">
                     <label>密码：</label>
-                    <input type="text" class="input-area" placeholder="6-12位"> </div>
+                    <input type="text" class="input-area" placeholder="6-12位">
+                    <div class="error-tips">
+                        <div class="error-content">
+                            两次输入的密码不一致
+                        </div>
+                    </div>
+                </div>
                 <div class="mt20">
                     <label>确认密码：</label>
                     <input type="tel" class="input-area" placeholder="再次输入密码">
