--- a/newIndex/login.html
+++ b/newIndex/login.html
@@ -49,6 +49,7 @@
 <div class="register-wrap">
     <div class="register-content">
         <div class="register-form">
+            <div class="secure-tips">你正在进入一个受安全保护的区域<i class="icon-lock"></i></div>
             <h1 class="register-title register-title-position">登录</h1>
             <form>
                 <div class="error-father">
