--- a/newIndex/register.html
+++ b/newIndex/register.html
@@ -49,16 +49,18 @@
 <div class="register-wrap">
     <div class="register-content">
         <div class="register-form">
+            <div class="secure-tips">你正在进入一个受安全保护的区域<i class="icon-lock"></i></div>
             <h1 class="register-title register-title-position">注册</h1>
             <form>
                 <div class="error-father">
                     <label>手机号码：</label>
                     <input type="tel" class="input-area" placeholder="只支持大陆地区的手机号码">
-                    <div class="shit-button mt20">
+                    <div class="shit-button mt20 fr">
                         <div class="small-button-content">
                             获取验证码
                         </div>
                     </div>
+                    <div class="clear">r</div>
                     <div class="error-tips">
                         <div class="error-content">
                             手机号码有误
@@ -87,9 +89,9 @@
                     <label>确认密码：</label>
                     <input type="tel" class="input-area" placeholder="再次输入密码">
                 </div>
-                <div class="shit-button mt20 fr">
+                <div class="shit-button mt20 fr" style="width: 100%">
                     <div class="small-button-content">
-                        确定
+                        确定创建账户
                     </div>
                 </div>
             </form>
