--- a/newIndex/index.html
+++ b/newIndex/index.html
@@ -23,6 +23,11 @@
         <div id="nav_wrapper">
             <ul id="nav_menu">
                 <li>
+                    <a href="index.html">
+                        首页
+                    </a>
+                </li>
+                <li>
                     <a href="http://blog.guoguan.com/?p=131" target="_blank"  id="current_nav">品牌故事</a>
                 </li>
                 <li>
@@ -38,8 +43,16 @@
                 <li>
                     <a href="http://blog.guoguan.com/?page_id=9" target="_blank">联系我们</a>
                 </li>
+                <li>
+                    <a href="#" class="culture-app" target="_blank">我的账号</a>
+                        <span>
+                            <a href="http://www.guoguan.com/wenzhang/" target="_blank">注册/登录</a>
+                            <a href="http://www.guoguan.com/fm/" target="_blank">购物车</a>
+                            <a href="http://www.guoguan.com/fm/" target="_blank">订单查询</a>
+                        </span>
+                </li>
             </ul>
-            <!--<div id="nav_animate_block"></div>-->
+            <!-- <div id="nav_animate_block"></div>-->
         </div>
     </div>
     <div class="second-banner">
