--- a/newIndex/register.html
+++ b/newIndex/register.html
@@ -22,6 +22,11 @@
         <div id="nav_wrapper">
             <ul id="nav_menu">
                 <li>
+                    <a href="index.html">
+                        首页
+                    </a>
+                </li>
+                <li>
                     <a href="http://blog.guoguan.com/?p=131" target="_blank"  id="current_nav">品牌故事</a>
                 </li>
                 <li>
@@ -37,8 +42,16 @@
                 <li>
                     <a href="http://blog.guoguan.com/?page_id=9" target="_blank">联系我们</a>
                 </li>
+                <li>
+                    <a href="#" class="culture-app" target="_blank">我的账号</a>
+                        <span>
+                            <a href="http://www.guoguan.com/wenzhang/" target="_blank">注册/登录</a>
+                            <a href="http://www.guoguan.com/fm/" target="_blank">购物车</a>
+                            <a href="http://www.guoguan.com/fm/" target="_blank">订单查询</a>
+                        </span>
+                </li>
             </ul>
-            <!--<div id="nav_animate_block"></div>-->
+            <!-- <div id="nav_animate_block"></div>-->
         </div>
     </div>
     <div class="second-banner">
@@ -55,12 +68,10 @@
                 <div class="error-father">
                     <label>手机号码：</label>
                     <input type="tel" class="input-area" placeholder="只支持大陆地区的手机号码">
-                    <div class="shit-button mt20 fr">
-                        <div class="small-button-content">
-                            获取验证码
-                        </div>
-                    </div>
-                    <div class="clear">r</div>
+                    <button class="shit-button mt20 fr">
+                        获取验证码
+                    </button>
+                    <div class="clear"></div>
                     <div class="error-tips">
                         <div class="error-content">
                             手机号码有误
@@ -89,11 +100,9 @@
                     <label>确认密码：</label>
                     <input type="tel" class="input-area" placeholder="再次输入密码">
                 </div>
-                <div class="shit-button mt20 fr" style="width: 100%">
-                    <div class="small-button-content">
-                        确定创建账户
-                    </div>
-                </div>
+                <button class="shit-button mt20 fr" style="width: 100%">
+                    确定创建账户
+                </button>
             </form>
         </div>
     </div>
