--- a/newIndex/cart.html
+++ b/newIndex/cart.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>国馆账号登录</title>
+    <title>国馆购物车</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="国馆账号注册">
-    <meta name="description" content="国馆账号注册">
+    <meta name="keywords" content="国馆购物车">
+    <meta name="description" content="国馆购物车">
     <link href="global/styles/base.css?v=00000001" type="text/css" rel="stylesheet">
     <link href="home/styles/home.css?v=00000001" type="text/css" rel="stylesheet">
-    <link href="loginregister/styles/register.css?v=00000001" type="text/css" rel="stylesheet">
+    <link href="mall/styles/cart.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="global/styles/font-awesome.min.css">
+    <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
 </head>
 <body>
 <!--head-->
@@ -23,7 +25,7 @@
             <ul id="nav_menu">
                 <li>
                     <a href="index.html">
-                        首页
+                    首页
                     </a>
                 </li>
                 <li>
@@ -42,65 +44,139 @@
                 <li>
                     <a href="http://blog.guoguan.com/?page_id=9" target="_blank">联系我们</a>
                 </li>
-                <li>
-                    <a href="#" class="culture-app" target="_blank">我的账号</a>
-                        <span>
-                            <a href="http://www.guoguan.com/wenzhang/" target="_blank">注册/登录</a>
-                            <a href="http://www.guoguan.com/fm/" target="_blank">购物车</a>
-                            <a href="http://www.guoguan.com/fm/" target="_blank">订单查询</a>
-                        </span>
-                </li>
             </ul>
-            <!-- <div id="nav_animate_block"></div>-->
+           <!-- <div id="nav_animate_block"></div>-->
         </div>
     </div>
     <div class="second-banner">
     </div>
 </div>
 
-<!--content-->
-<div class="register-wrap">
-    <div class="register-content">
-        <div class="register-form">
-            <div class="secure-tips">你正在进入一个受安全保护的区域<i class="icon-lock"></i></div>
-            <h1 class="register-title register-title-position">登录</h1>
-            <form>
-                <div class="error-father">
-                    <label>手机号码：</label>
-                    <input type="tel" class="input-area" placeholder="只支持大陆地区的手机号码">
-                    <div class="error-tips">
-                        <div class="error-content">
-                            手机号码错误
-                        </div>
-                    </div>
-                </div>
-                <div class="mt20 error-father">
-                    <label>密码：</label>
-                    <input type="text" class="input-area" placeholder="6-12位">
-                    <div class="error-tips">
-                        <div class="error-content">
-                            密码错误
-                        </div>
-                    </div>
-                </div>
-                <div class="login-auto">
-                    <input type="checkbox" >两周内自动登录
-                </div>
-                <button class="shit-button mt20 fr">
-                    登录
-                </button>
-            </form>
 
-            <div class="register-enter">
-                <h1 class="register-title mt20">注册</h1>
-                <div class="register-no-count">还没有国馆账户？点击下方按钮创建</div>
-                <button class="shit-button fr">
-                    创建账户
-                </button>
+<!--content-->
+<div class="mall-content">
+    <div class="cart-content">
+        <div class="clear"></div>
+        <!--<div class="cart-title">
+            我的购物车
+            <span>2件商品</span>
+        </div>-->
+        <ul class="shopcartstep clearfix">
+            <li class="complete"><span>1</span>我的购物车</li>
+            <li><span>2</span>填写核对订单信息</li>
+            <li><span>3</span>成功提交订单</li>
+        </ul>
+        <div class="clear"></div>
+        <ul>
+            <li>
+                <ul>
+                    <li>商品</li>
+                    <li>品名</li>
+                    <li>数量</li>
+                    <li>金额</li>
+                    <li class="cart-last-li">操作</li>
+                </ul>
+            </li> <!--购物车head-->
+
+            <li>
+                <ul>
+                    <li>
+                        <img src="img/product.jpg" width="150" height="100">
+                    </li>
+                    <li>
+                        <div class="product-title">
+                            国馆 · 中国道
+                        </div>
+                        <div class="product-detail">
+                            大师跨界之作
+                        </div>
+                        <div class="product-price">
+                             2,399
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="icon-minus icon-minus-plus" style="margin-right:5px">
+                            </i>
+                        </a>
+                        <input class="input-number" type="text">
+                        <a href="#">
+                            <i class="icon-plus icon-minus-plus" style="margin-left:5px">
+                            </i>
+                        </a>
+                    </li>
+                    <li>
+                        <div class="product-price mt0" >
+                            2,399
+                        </div>
+                    </li>
+                    <li class="cart-last-li">删除</li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li>
+                        <img src="img/product.jpg" width="150" height="100">
+                    </li>
+                    <li>
+                        <div class="product-title">
+                            国馆 · 中国道
+                        </div>
+                        <div class="product-detail">
+                            大师跨界之作
+                        </div>
+                        <div class="product-price">
+                             2,399
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="icon-minus icon-minus-plus" style="margin-right:5px">
+                            </i>
+                        </a>
+                        <input class="input-number" type="text">
+                        <a href="#">
+                            <i class="icon-plus icon-minus-plus" style="margin-left:5px">
+                            </i>
+                        </a>
+                    </li>
+                    <li>
+                        <div class="product-price mt0" >
+                            2,399
+                        </div>
+                    </li>
+                    <li class="cart-last-li">删除</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="cart-board">
+        <div class="cart-content mt0">
+            <div class="cart-board-left">
+                小结信息
+            </div>
+            <div class="cart-board-right">
+                <ul>
+                    <li>订单商品总金额</li>
+                    <li>实际支付运费</li>
+                    <li style="font-size: 16px; font-weight:bold">订单总计</li>
+                </ul>
+                <ul class="cart-board-number">
+                    <li> 2,399</li>
+                    <li> 0</li>
+                    <li class="cart-board-number-white"> 2,399</li>
+                </ul>
             </div>
         </div>
     </div>
+    <div class="cart-content " style="margin-top: 50px; padding-bottom: 100px">
+        <button class="empty-square-button fl" style="margin-left: 20px">继续选购</button>
+        <a href="address.html">
+            <button class="square-button fr" style="margin-right: 20px">下一步</button>
+        </a>
+    </div>
 </div>
+
 
 <!--footer-->
 <div id="homefooter" class="mt0" data-hires="true">
@@ -218,6 +294,6 @@
 
     </div><!--/wrapper-->
 </div>
+
 </body>
-<script src="global/scripts/lib/jquery-1.8.0.js" type="text/javascript"></script>
 </html>
