--- a/newIndex/pay.html
+++ b/newIndex/pay.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>国馆账号登录</title>
+    <title>支付结算-国馆</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="国馆账号注册">
-    <meta name="description" content="国馆账号注册">
+    <meta name="keywords" content="支付结算-国馆">
+    <meta name="description" content="支付结算-国馆">
     <link href="global/styles/base.css?v=00000001" type="text/css" rel="stylesheet">
     <link href="home/styles/home.css?v=00000001" type="text/css" rel="stylesheet">
-    <link href="loginregister/styles/register.css?v=00000001" type="text/css" rel="stylesheet">
+    <link href="mall/styles/cart.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="global/styles/font-awesome.min.css">
+    <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
 </head>
 <body>
 <!--head-->
@@ -59,45 +61,44 @@
 </div>
 
 <!--content-->
-<div class="register-wrap">
-    <div class="register-content">
-        <div class="register-form">
-            <div class="secure-tips">你正在进入一个受安全保护的区域<i class="icon-lock"></i></div>
-            <h1 class="register-title register-title-position">登录</h1>
-            <form>
-                <div class="error-father">
-                    <label>手机号码：</label>
-                    <input type="tel" class="input-area" placeholder="只支持大陆地区的手机号码">
-                    <div class="error-tips">
-                        <div class="error-content">
-                            手机号码错误
-                        </div>
-                    </div>
+<div class="mall-content">
+    <div class="cart-content">
+        <ul class="shopcartstep clearfix">
+            <li class="complete"><span>1</span>我的购物车</li>
+            <li class="complete"><span>2</span>填写核对订单信息</li>
+            <li class="complete"><span>3</span>成功提交订单</li>
+        </ul>
+        <div class="clear"></div>
+        <div class="submit-success-content">
+            <div class="left">
+                <div class="submit-gou">
+                    <i class="icon-ok"></i>
                 </div>
-                <div class="mt20 error-father">
-                    <label>密码：</label>
-                    <input type="text" class="input-area" placeholder="6-12位">
-                    <div class="error-tips">
-                        <div class="error-content">
-                            密码错误
-                        </div>
-                    </div>
-                </div>
-                <div class="login-auto">
-                    <input type="checkbox" >两周内自动登录
-                </div>
-                <button class="shit-button mt20 fr">
-                    登录
-                </button>
-            </form>
-
-            <div class="register-enter">
-                <h1 class="register-title mt20">注册</h1>
-                <div class="register-no-count">还没有国馆账户？点击下方按钮创建</div>
-                <button class="shit-button fr">
-                    创建账户
-                </button>
             </div>
+            <div class="right">
+                <h2>订单提交成功，应付金额 <span class="price-payment">1799.00</span> 元</h2>
+                <span>订单号：05197662600768890&nbsp;&nbsp;&nbsp;&nbsp;请您在 <bdo>3 日</bdo> 内完成支付，否则订单会被自动取消</span>
+                <div class="order-detail">
+                    <div>
+                        <span>商品</span> 国馆 · 中国道
+                    </div>
+                    <div>
+                        <span>收货地址</span> 广东省广州市荔湾区是是是是是是 510145（邮编） 谢奇（收） 18503014025
+                        <a href="address.html" style=" margin-left:10px">修改</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2 class="order-title">在线支付</h2>
+        <div class="choose-pay">
+            <input type="radio" checked="checked" style="margin-top: -33px;
+vertical-align: middle; margin-left: 15px">
+            <img src="images/zhifubao.jpg" width="134" height="44">
+        </div>
+        <div class="cart-content " style="margin-top: 50px; padding-bottom: 100px">
+            <a href="pay-success.html">
+                <button class="square-button fr" style="margin-right: 20px">立即支付</button>
+            </a>
         </div>
     </div>
 </div>
@@ -219,5 +220,4 @@
     </div><!--/wrapper-->
 </div>
 </body>
-<script src="global/scripts/lib/jquery-1.8.0.js" type="text/javascript"></script>
 </html>
