--- a/newIndex/address.html
+++ b/newIndex/address.html
@@ -74,7 +74,7 @@
             <li><span>3</span>成功提交订单</li>
         </ul>
         <div class="clear"></div>
-        <h2 class="order-title">收货人信息</h2>
+        <h2 class="order-title">添加地址</h2>
 
         <!--表单-->
         <form>
@@ -126,103 +126,11 @@
             </div>
         </form>
 
-        <ul>
-            <li>
-                <ul>
-                    <li>商品</li>
-                    <li>品名</li>
-                    <li>数量</li>
-                    <li>金额</li>
-                    <li class="cart-last-li">小计</li>
-                </ul>
-            </li> <!--购物车head-->
+    </div>
 
-            <li>
-                <ul>
-                    <li>
-                        <img src="img/product.jpg" width="150" height="100">
-                    </li>
-                    <li>
-                        <div class="product-title">
-                            国馆 · 中国道
-                        </div>
-                        <div class="product-detail">
-                            大师跨界之作
-                        </div>
-                        <div class="product-price">
-                             2,399
-                        </div>
-                    </li>
-                    <li>
-                        <div>2</div>
-                    </li>
-                    <li>
-                        <div class="product-price mt0" >
-                            2,399
-                        </div>
-                    </li>
-                    <li class="cart-last-li">
-                        <div class="product-price mt0" >
-                            5,399
-                        </div>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <ul>
-                    <li>
-                        <img src="img/product.jpg" width="150" height="100">
-                    </li>
-                    <li>
-                        <div class="product-title">
-                            国馆 · 中国道
-                        </div>
-                        <div class="product-detail">
-                            大师跨界之作
-                        </div>
-                        <div class="product-price">
-                             2,399
-                        </div>
-                    </li>
-                    <li>
-                        <div>2</div>
-                    </li>
-                    <li>
-                        <div class="product-price mt0" >
-                            2,399
-                        </div>
-                    </li>
-                    <li class="cart-last-li">
-                        <div class="product-price mt0" >
-                            5,399
-                        </div>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div class="cart-board">
-        <div class="cart-content mt0">
-            <div class="cart-board-left">
-                小结信息
-            </div>
-            <div class="cart-board-right">
-                <ul>
-                    <li>订单商品总金额</li>
-                    <li>实际支付运费</li>
-                    <li style="font-size: 16px; font-weight:bold">订单总计</li>
-                </ul>
-                <ul class="cart-board-number">
-                    <li> 2,399</li>
-                    <li> 0</li>
-                    <li class="cart-board-number-white"> 2,399</li>
-                </ul>
-            </div>
-        </div>
-    </div>
     <div class="cart-content " style="margin-top: 50px; padding-bottom: 100px">
-        <a href="pay.html">
-            <button class="square-button fr" style="margin-right: 20px">提交订单</button>
+        <a href="address-choose.html">
+            <button class="square-button fr" style="margin-right: 20px">保存地址</button>
         </a>
     </div>
 </div>
