中国道页面修改

--- a/newIndex/zhongguodao.html
+++ b/newIndex/zhongguodao.html
@@ -59,12 +59,18 @@
         </div>
     </div>
     <div class="second-banner">
+        <div class="purchase-content " style="margin-top: 5px;">
+            <a href="http://www.guoguan.com/index/qore/" class="qore-code">
+                <div class="small-button" style="float: right">
+                    <div class="small-button-content">立即购买</div>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
 
 <div class="good-information1 ">
-    <img src="images/logo-line.png" style="width: 100px; height: 100px;padding-top: 85px; margin-bottom: 25px; display:block; margin-left:auto; margin-right:auto;">
-    <img src="images/111.png" style="width:625px; display:block; margin-left:auto; margin-right:auto;">
+    <img src="images/111.png" style="width:625px; display:block; margin-left:auto; margin-right:auto; padding-top: 124px;">
         <div class="watch-tv">
             <a href="youku.html" style="text-decoration: underline">
             观看视频
@@ -79,31 +85,43 @@ margin-top: -3px;">
 </div>
 <a href="http://blog.guoguan.com/?p=170" target="_blank">
     <div class="good-information3">
+        <div class="shape">
+            <a href="http://blog.guoguan.com/?p=180" target="_blank" style="text-decoration: underline">
+                了解详情 >
+            </a>
+        </div>
     </div>
 </a>
 <div class="good-information4">
     <span class="hidden">书法大师李正天，亲笔题写“天道酬勤”“地道酬善”“商道酬信”“业道酬精”，极致创作细致到每一个字。</span>
     <span class="hidden">酿酒大师李家顺亲自酿酒，用顶级窖龄老酒作为国馆·中国道的专属酒体。</span>
 </div>
-<a href="http://blog.guoguan.com/?p=180" target="_blank">
-    <div class="good-information5">
-            <span class="hidden">最具中国气质的卷轴器型
-                                 最中国的人生哲学,国内顶尖艺术团队，磨砺多年，设计出以卷轴为形，
-                  景泰蓝纹饰为轴的酒器，中国气质，淋漓尽致。
-                  四瓶酒，分天、地、商、业，说的是为人处世的四种境界。
-                  天地之间，以善为先，商业之道，以诚为本。</span>
+<div class="good-information5">
+    <div class="dashi">
+        <a href="http://blog.guoguan.com/?p=170" target="_blank" style="text-decoration: underline">
+            了解详情 >
+        </a>
     </div>
-    <div class="good-information6">
-    </div>
-</a>
-<a href="http://blog.guoguan.com/?p=151" target="_blank">
+        <span class="hidden">最具中国气质的卷轴器型
+                             最中国的人生哲学,国内顶尖艺术团队，磨砺多年，设计出以卷轴为形，
+              景泰蓝纹饰为轴的酒器，中国气质，淋漓尽致。
+              四瓶酒，分天、地、商、业，说的是为人处世的四种境界。
+              天地之间，以善为先，商业之道，以诚为本。</span>
+</div>
+<div class="good-information6">
+</div>
 <div class="good-information7">
+    <div class="zuofang">
+        <a href="http://blog.guoguan.com/?p=151" target="_blank" style="text-decoration: underline">
+            了解详情 >
+        </a>
+    </div>
+
             <span class="hidden">明清泰安作坊
                                  老窖池原址酿造,“千年老窖万年糟”，窖池越老，酿酒越好。
                                          我们选用沱牌舍得明清泰安作坊窖龄老酒作为专属酒体，
                                          数百年老窖酿出来的酒绝非寻常可比，在浓香之中堪称极品。</span>
 </div>
-</a>
 <div class="good-information8">
             <span class="hidden">
             客厅里的绝佳收藏,有没有可能，有一种酒是能看、能品、能把玩的？
@@ -126,11 +144,16 @@ margin-top: -3px;">
             </span>
 </div>
 <div class="good-information11">
-           <span class="hidden">
-           送长辈，
-           还有什么比中国道更加体面？
-           也许平时我们对长辈说的话不多，但总有一些东西，能帮我表达对他们的尊重，并让他们满心欢喜？中国道，真正打动父辈的中国礼，晚辈送给长者的“玩具”。
-           </span>
+    <a href="http://www.guoguan.com/index/qore/" class="qore-code">
+        <div class="small-button zhongguodao-purchase">
+            <div class="small-button-content">立即购买</div>
+        </div>
+    </a>
+       <span class="hidden">
+       送长辈，
+       还有什么比中国道更加体面？
+       也许平时我们对长辈说的话不多，但总有一些东西，能帮我表达对他们的尊重，并让他们满心欢喜？中国道，真正打动父辈的中国礼，晚辈送给长者的“玩具”。
+       </span>
 </div>
 <div class="good-information12">
           <span class="hidden">
