--- a/newIndex/index.html
+++ b/newIndex/index.html
@@ -17,13 +17,13 @@
         <a href="http://www.guoguan.com">
             <div class="logo"></div>
         </a>
-        <a href="">
+        <a href="zhongguodao.html" target="_blank">
             <div class="title"></div>
         </a>
         <div id="nav_wrapper">
             <ul id="nav_menu">
                 <li>
-                    <a href="index.html">
+                    <a href="index.html" class="current">
                         首页
                     </a>
                 </li>
